# ECommerce

./: pyproject.toml
ECommerce/: settings.py  urls.py
ShoppingCartAdmin/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
