[tool.poetry]
name = "e-commerce project"
version = "0.1.0"
description = "Ecommerce app that the user can sell in it and buy products, it's built using django "
authors = ["Alaa Fawzy <alaafawzy963@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce project"}]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.5.0"
django-money = "^3.1.0"
pendulum = "^2.1.2"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
